shenyu-examples/shenyu-examples-brpc/shenyu-examples-brpc-service/k8s/shenyu-examples-brpc.yml
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: shenyu-examples-brpc-deployment
  labels:
    app: shenyu-examples-brpc
    all: shenyu-examples-brpc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shenyu-examples-brpc
      all: shenyu-examples-brpc
  strategy: {}
  template:
    metadata:
      labels:
        app: shenyu-examples-brpc
        all: shenyu-examples-brpc
    spec:
      containers:
        - image: shenyu-examples-brpc-service
          name: shenyu-examples-brpc
          livenessProbe:
            exec:
              command:
                - wget -q -O - http://localhost:8011/actuator/health | grep UP || exit 1
            initialDelaySeconds: 10
            failureThreshold: 3
            timeoutSeconds: 2
          ports:
            - containerPort: 8011
            - containerPort: 8005
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
status: {}

---
apiVersion: v1
kind: Service
metadata:
  name: shenyu-examples-brpc-service
  labels:
    app: shenyu-examples-brpc
    all: shenyu-examples-brpc
spec:
  selector:
    app: shenyu-examples-brpc
    all: shenyu-examples-brpc
  type: NodePort
  ports:
    - name: "8011"
      port: 8011
      targetPort: 8011
      nodePort: 31186
    - name: "8005"
      port: 8005
      targetPort: 8005
      nodePort: 31185
status:
  loadBalancer: {}
