shenyu-examples/shenyu-examples-brpc/shenyu-examples-brpc-service/k8s/ingress.yml
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: v1
kind: Service
metadata:
  name: getUser
  annotations:
    kubernetes.io/ingress.class: shenyu
    shenyu.apache.org/plugin-brpc-enabled: 'true'
    shenyu.apache.org/plugin-brpc-app-name: brpc
    shenyu.apache.org/plugin-context-path-path: /brpc
    shenyu.apache.org/plugin-brpc-path: /brpc/getUser
    shenyu.apache.org/plugin-brpc-rpc-type: brpc
    shenyu.apache.org/plugin-brpc-service-name: org.apache.shenyu.examples.brpc.api.service.BrpcDemoService
    shenyu.apache.org/plugin-brpc-method-name: getUser
    shenyu.apache.org/plugin-brpc-params-type: java.lang.Long
    # The host format should be either an ip address or an ingress name.
    shenyu.apache.org/plugin-brpc-rpc-expand: |
      {"methodInfo":[{"methodName":"getUser","paramTypes":[{"left":"java.lang.Long","right":"userId"}]}],"host":"shenyu-examples-brpc-service","port":8005}
spec:
  selector:
    app: shenyu-examples-brpc-service
  ports:
    - port: 8005

---

apiVersion: v1
kind: Service
metadata:
  name: connect

  annotations:
    kubernetes.io/ingress.class: shenyu
    shenyu.apache.org/plugin-brpc-enabled: 'true'
    shenyu.apache.org/plugin-brpc-app-name: brpc
    shenyu.apache.org/plugin-context-path-path: /brpc
    shenyu.apache.org/plugin-brpc-path: /brpc/connect
    shenyu.apache.org/plugin-brpc-rpc-type: brpc
    shenyu.apache.org/plugin-brpc-service-name: org.apache.shenyu.examples.brpc.api.service.BrpcDemoService
    shenyu.apache.org/plugin-brpc-method-name: connect
    # The host format should be either an ip address or an ingress name.
    shenyu.apache.org/plugin-brpc-rpc-expand: |
      {"methodInfo":[{"methodName":"connect","paramTypes":[]}],"host":"shenyu-examples-brpc-service","port":8005}
spec:
  selector:
    app: shenyu-examples-brpc-service
  ports:
    - port: 8005

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    shenyu.apache.org/metadata-labels-1: getUser
    shenyu.apache.org/metadata-labels-2: connect
  annotations:
    kubernetes.io/ingress.class: shenyu
    shenyu.apache.org/plugin-brpc-enabled: 'true'
  name: demo-ingress
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: shenyu-examples-brpc-service
                port:
                  number: 8005
            path: /brpc/
            pathType: Prefix
